package engine.observer;

public interface GameObserver {
    void onEvent(GameEvent evento);
}
